test/arrays/sungeun/invalid_reindex2.good
invalid_reindex2.chpl:15: error: halt reached - extent mismatch in dimension 3: cannot reindex() from 3..10 to 12..20
